Fixed spacing between buttons and reduced shadow intensity

--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -178,6 +178,6 @@ h6 {
 
 .fbis-button:active {
   background-color: #17766B;
-  box-shadow:         inset 1px 1px 10px #333;
+  box-shadow:         inset 1px 1px 10px #555555;
   color: white;
 }
