--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2231,7 +2231,11 @@ div:hover::-webkit-scrollbar {
 }
 
 .sass-button {
-    margin-top: 10px;
+
+}
+
+.right-panel-last-button {
+    margin-bottom: 0.25rem !important;
 }
 
 .popup-loading, .popup-error {
@@ -2282,4 +2286,6 @@ div:hover::-webkit-scrollbar {
 
 .right-panel-button {
     width: 100%;
+    margin-bottom: 0;
 }
+
